objects/Funcionalidad_Perfil__c.object
<CustomObject>
    <fields>
        <fullName>Funcionalidad__c</fullName>
        <label>Funcionalidad</label>
        <referenceTo>Funcionalidad__c</referenceTo>
        <relationshipLabel>Funcionalidades Perfiles</relationshipLabel>
        <relationshipName>Funcionalidades_Perfiles</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PerfilPicklist__c</fullName>
        <label>Perfil</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>FAN - Admin Funcional</fullName>
                </value>
                <value>
                    <fullName>FAN - Administracion de Ventas</fullName>
                </value>
                <value>
                    <fullName>FAN - Analista Control Morosidad</fullName>
                </value>
                <value>
                    <fullName>FAN - Analista de Ajustes C&amp;C</fullName>
                </value>
                <value>
                    <fullName>FAN - Analista de Campañas</fullName>
                </value>
                <value>
                    <fullName>FAN - Analista de Cobranzas</fullName>
                </value>
                <value>
                    <fullName>FAN - Analista Delivery Interno</fullName>
                </value>
                <value>
                    <fullName>FAN - Analista de MKT Catalogo</fullName>
                </value>
                <value>
                    <fullName>FAN - Analista de MKT Gral</fullName>
                </value>
                <value>
                    <fullName>FAN - Analista de Reporting</fullName>
                </value>
                <value>
                    <fullName>FAN - Analista Fraude</fullName>
                </value>
                <value>
                    <fullName>FAN - Analista Riesgo Crediticio</fullName>
                </value>
                <value>
                    <fullName>FAN - Analista Soporte</fullName>
                </value>
                <value>
                    <fullName>FAN - Atención Planes Internos</fullName>
                </value>
                <value>
                    <fullName>FAN - Auditoria de Sistemas</fullName>
                </value>
                <value>
                    <fullName>FAN - Back Office</fullName>
                </value>
                <value>
                    <fullName>FAN - BDC Administrador</fullName>
                </value>
                <value>
                    <fullName>FAN - BDC Colaborador</fullName>
                </value>
                <value>
                    <fullName>FAN - BDC Moderador</fullName>
                </value>
                <value>
                    <fullName>FAN - BDC Publicador</fullName>
                </value>
                <value>
                    <fullName>FAN - BO Delivery Interno</fullName>
                </value>
                <value>
                    <fullName>FAN - Consulta Auditoria</fullName>
                </value>
                <value>
                    <fullName>FAN - Director</fullName>
                </value>
                <value>
                    <fullName>FAN - Ejecutivo de Cuenta</fullName>
                </value>
                <value>
                    <fullName>FAN - Front Agentes</fullName>
                </value>
                <value>
                    <fullName>FAN - Front Agentes - GINA</fullName>
                </value>
                <value>
                    <fullName>FAN - Front OOCC</fullName>
                </value>
                <value>
                    <fullName>FAN - Front Telefonico</fullName>
                </value>
                <value>
                    <fullName>FAN - Gerente 1ra Dep</fullName>
                </value>
                <value>
                    <fullName>FAN - Gerente 2da Dep</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Perfil__c</fullName>
        <label>Perfil</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Funcionalidad Perfil</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>FuncPerfil-{000000}</displayFormat>
        <label>Funcionalidad Perfil Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Funcionalidades Perfiles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>